# website-as-app

./: .flake8  .gitignore  .markdownlint.yml  .markdownlint.yml.dist  .pre-commit-config.yaml  .pre-commit-config.yaml.dist  CHANGES.md  README.md  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  webapp.spec
.github/workflows/: linter.yml  markdown.yml
artwork/: README.md
docs/: README.md  dev.md  screenshot.xcf
docs/img/: screenshot.xcf
extras/: webapp.sh
websiteapp/: __init__.py  about.py  bookmarks.py  const.py  toolbar.py  utils.py  webapp.py  webengine.py
